[package]
name = "silica-crc721"
version = "0.1.0"
edition = "2021"
authors = ["Silica Protocol Team"]
license = "MIT OR Apache-2.0"
description = "CRC-721 Non-Fungible Token Standard implementation for Silica Protocol"
repository = "https://github.com/Silica-Contracts/crc721"
keywords = ["silica", "nft", "erc721", "non-fungible", "smart-contracts"]
categories = ["wasm", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
silica-contract-sdk = { git = "https://github.com/Silica-Contracts/sdk" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
blake3 = { version = "1.5", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std", "blake3/std", "hex/std"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true